# ionos-finops

./: .flake8  .gitignore  .ionos-finops.example.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.yml  4-question.md  config.yml  pricing_update.md
.github/workflows/: ci.yml  pricing-update.yml  publish.yml
docs/: pricing-updates.md
examples/: README.md  simple_infrastructure.tf
ionos_finops/: __init__.py  cli.py
ionos_finops/output/: __init__.py  html.py  json.py  table.py
ionos_finops/parser/: __init__.py  terraform.py
ionos_finops/pricing/: __init__.py  api.py  billing_api.py  calculator.py  data.py  scheduler.py
ionos_finops/pricing_data/: de_ber.json  de_fra.json  de_fra2.json  default.json  es_log.json  fr_par.json  gb_lhr.json  gb_wor.json  us_ewr.json  us_kc.json  us_las.json
ionos_finops/resources/: __init__.py  autoscaling.py  backup.py  base.py  compute.py  database.py  kubernetes.py  management.py  network.py  networking.py  s3.py  storage.py
scripts/: check_pricing_status.py  fetch_real_pricing.py  manual_pricing_update.py  update_pricing.py
tests/: test_calculator.py  test_integration.py  test_performance.py  test_pricing.py  test_pricing_validation.py  test_resources.py
